Fix slider webkit overflow scrolling

--- a/src/css/styles/_module-slider.scss
+++ b/src/css/styles/_module-slider.scss
@@ -8,7 +8,7 @@
 	box-sizing: border-box;
 	overflow-x: auto;
 	overflow-y: hidden;
-	-webkit-overflow-scolling: touch;
+	-webkit-overflow-scrolling: touch;
 
 	&:focus,
 	&:active {
